test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order2-common-svc
  namespace: api
spec:  
  ports:
  - protocol: TCP
    name: http
    port: 9090
