manifests.yaml
# Source: simple-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api
  annotations:
    project.werf.io/env: ""
    project.werf.io/name: simple-api
    werf.io/version: v1.2.248
spec:
  selector:
    app: simple-api
  ports:
    - name: http
      port: 8080
---
# Source: simple-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api
  annotations:
    project.werf.io/env: ""
    project.werf.io/name: simple-api
    werf.io/version: v1.2.248
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      imagePullSecrets:
        - name: registrysecret
      containers:
        - name: app
          image:
          ports:
            - containerPort: 8080
---
# Source: simple-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    project.werf.io/env: ""
    project.werf.io/name: simple-api
    werf.io/version: v1.2.248
  name: simple-api
spec:
  rules:
    - host: simple-api.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-api
                port:
                  number: 8080
