test-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: api 
spec:
  hosts:
  - "order2-common-svc.api.svc.cluster.local"
  

  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: simple-api-svc
        port:
          number: 8080
